k8s/dev/security/datadog-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: datadog
  namespace: default

spec:
  selector:
    matchLabels:
      app: datadog

  template:
    metadata:
      labels:
        app: datadog

    spec:
      serviceAccountName: datadog-agent

      containers:
      - name: agent
        image: gcr.io/datadoghq/agent:latest

        ports:
        - containerPort: 8126
        - containerPort: 5001
          name: agentapi   # ✅ required for cluster-agent
