k8s/dev/security/datadog-cluster-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datadog-cluster-agent
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: datadog-cluster-agent

  template:
    metadata:
      labels:
        app: datadog-cluster-agent

    spec:
      serviceAccountName: datadog-agent

      containers:
      - name: cluster-agent
        image: gcr.io/datadoghq/cluster-agent:latest
---
apiVersion: v1
kind: Service
metadata:
  name: datadog-cluster-agent
  namespace: default

spec:
  selector:
    app: datadog-cluster-agent
  ports:
  - port: 5005
    targetPort: 5005
